crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_sibling_wildcard_branch.txt
A = [(A) _]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle consumes no input
 --> query.ptk:1:7
  |
1 | A = [(A) _]
  |       ^
  |       |
  |       references itself
  |
help: recursive references must consume input before recursing
-------------------- SYMBOLS ---------------------
A
  A (cycle)
